Changelog for {{$dist->name}}

{{$NEXT}}
  - Get github metadata from the MediaWiki-Bot organization's repo [gh-69]
  - Use Test::RequiresInternet to make sure we can reach the wikis we test against
  - Mark flaky tests as extended
  - Use HTTPS by default and warn if ever trying to log in over HTTP
  - Added pointers to API documentation in POD [gh-63]

5.006000  2014-09-01
  - Move subpages correctly when requested [GH#55 - labster]
  - Use new prop paramter in expandtemplates [GH#58, thanks fhocutt]
  - Warn if neither operator nor a UA string were given [gh-61]
  - Show a good example of customizing the UA string [gh-66]
  - Use symbolic constants instead of magic numbers, and add
    MediaWiki::Bot::Constants so developers can use them too [gh-59]
  - Support solving CAPTCHAs [gh-2]
  - Remove automatic editing of the bot operator's talk page [gh-68]
  - Use new method for getting tokens

5.005007  2013-11-27
  - Don't fail due to new Module::Pluggable warnings
  - Ensure t/48-get_image.t has JPEG support
  - Corrected documentation for get_image (GH#54, thanks sanxiago!)
  - Correct a precedence issue uncovered by new warnings in perl v5.19.4

5.005006  2013-04-07
  - Plan t/40-upload.t properly [GH#50]

5.005005  2013-03-29
  - Added upload_from_url function (GH#48; stemd)
  - Added two parameters to recentchanges functions (GH#48; stemd)
  - Added timed_count_contributions function (GH#48; stemd)

5.005004  2012-10-27
  - More robust error-checking in some cases (GH#45, James DuPont)

5.005003  2012-09-14
  - Be more liberal with matching whitespace in the diff test
  - Correctly handle namespace #0 (GH#43, thanks Seth!)
  - Improved error handling for uploads (GH#33)
  - Fix an uninitialized warning in get_log (GH#42)

3.005002  2012-05-08
  - Updated test suite for on-wiki changes

3.005001  2012-04-08
  - Fixed erroneous documentation on the edit method
  - Fixed edit failures due to changes in HTTP::Message 6.03 (GH#39)

3.005000  2012-03-03