@@ -1,8 +1,7 @@
 use strict;
 use warnings;
 use Test::RequiresInternet 'test.wikipedia.org' => 80;
-use Test::More tests => 6;
-use Test::Warn;
+use Test::More tests => 2;
 
 use MediaWiki::Bot;
 my $t = __FILE__;
@@ -12,28 +11,5 @@ my $bot = MediaWiki::Bot->new({
     host    => 'test.wikipedia.org',
 });
 
-{
-    my $user   = 'Bad Username'; # has been blocked before
-    my $result = $bot->was_blocked($user);
-    my $bc;
-    warning_is(
-        sub { $bc = $bot->test_block_hist($user); },
-        'test_block_hist is an alias of was_blocked; please use the new method name. This alias might be removed in a future release',
-        'test_block_hist is deprecated'
-    );
-    ok($result,         'block history - has been blocked');
-    is($result, $bc,    'BC method agrees with current method');
-}
-
-{
-    my $user   = 'Mike.lifeguard'; # I haven't ever been blocked
-    my $result = $bot->was_blocked($user);
-    my $bc;
-    warning_is(
-        sub { $bc = $bot->test_block_hist($user); },
-        'test_block_hist is an alias of was_blocked; please use the new method name. This alias might be removed in a future release',
-        'test_block_hist is deprecated'
-    );
-    ok(!$result,     'block history - never blocked');
-    is($result, $bc,    'BC method agrees with current method');
-}
+ok( $bot->was_blocked('Bad Username'),   'block history - has been blocked');
+ok(!$bot->was_blocked('Mike.lifeguard'), 'block history - never blocked'   );
